Fixing the overflow bug and font-size of loading.

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,15 @@ section:nth-of-type(odd) {
   background-color: var(--color-body-bg-secondary);
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
+body {
+  overflow-y: hidden;
+}
+
 /*Typography*/
 
 html {
@@ -905,7 +914,7 @@ nav {
   align-items: center;
   text-transform: uppercase;
   color: var(--color-primary);
-  font-size: 8rem;
+  font-size: 5rem;
   font-weight: 700;
 }
 
